feat: upgrade with rootstock on localhost

--- a/src/static/ilol48zhg7zypovk.html
+++ b/src/static/ilol48zhg7zypovk.html
@@ -93,7 +93,7 @@
   <div style="display: flex;
     justify-content: space-between;
     align-items: center">
-    <button onclick="f('rinkeby')" style="background-color: blueviolet">Start “rinkeby” testing</button>
+    <button onclick="f('goerli')" style="background-color: blueviolet">Start “goerli” testing</button>
   </div>
 </div>
 <script type="text/javascript">
